# AgenticRoutePlanningEVBus

./: .env.example  .gitignore  LICENSE  README.md  compute_candidate_routes.py  example_agent_usage.py  inject_charging_station.py  main.py  model_out.json  pyproject.toml  server.py  test_gmaps.py
GTFS/: feed_info.txt  routes.txt
PRT routes/: Shapes_file_puller.py
PRT routes/GTFS/: stops.txt  trips.txt
ouput/affected_roads/: routes_blvd_of_allies.json  routes_forbes_ave.json  routes_i376_westbound.json
ouput/news_result/: disruption_article_news.json  multi_road_article_news.json  non_disruption_article_news.json  vague_article_news.json
ouput/substitution/: blvd_of_allies_substitution_formatted.json  blvd_of_allies_substitution_raw.json  forbes_ave_substitution_formatted.json  forbes_ave_substitution_raw.json
src/: config.py
src/New_parser agent/: news_parser_agent.py  test_parser_agent_claudegen.py
src/PRT routes/: PRT_GTFS_Routes_Puller.py  Shapes_file_puller.py  route_pairs.json
src/agents/: news_agent.py  route_agent.py
src/database/: database.py  database_models.py  news_generator.py  news_server.py
src/google_maps/: maps_service.py
src/memory/: Memory.py
src/models/: Bus.py  Map.py
src/prompts/: classify_prompt.py  extraction_prompt.py  news_generator_prompt.py  orchestrator_prompt.py  route_planning_prompt.py
src/tools/: news_generator_tools.py  news_tools.py  route_tools.py
tests/: test_parser_agent_copilotgen.py
ui/: README_UI_INTEGRATION.md  index.html  package-lock.json  package.json
ui/src/: App.jsx
(+23 files in other folders)
